# gh-actions-exporter

./: .gitignore  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-docs.yaml  docker-build.yaml  publish-docs.yaml  release.yml  tests.yaml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml
charts/gh-action-exporter/: Chart.yaml  values.yaml
charts/gh-action-exporter/templates/: _helpers.tpl  basic-auth-secret.yaml  config.yaml  deployment.yaml  ingress.yaml  service-api.yaml  service-monitor.yaml  serviceaccount.yaml
charts/gh-action-exporter/templates/tests/: test-connection.yaml
docs/: index.md  tags.md
docs/design/: my-design.md
docs/getting-started/: local-setup.md  run-it-locally.md
docs/metrics-analysis-prometheus/: collected-reported-metrics.md  prometheus.md
docs/runner-type/: runner-type.md
docs/setup/: collected-reported-metrics.md  utilizing-grafana.md
gh_actions_exporter/: Webhook.py  config.py  cost.py  githubClient.py  jwtGenerator.py  main.py  metrics.py  tokenGenerator.py  types.py  workflow_cost.md.j2
manifests/: kustomization.yaml
manifests/base/: deployment.yaml  kustomization.yaml  service.yaml
tests/api/: conftest.py  test_app.py  test_job.py  test_job_app.py  test_workflow.py
tests/api/app/: test_app.py
tests/api/metrics/: conftest.py  test_app.py  test_job.py  test_workflow.py
tests/unit/: conftest.py  test_cost.py
