[tool.poetry]
name = "gh-actions-exporter"
version = "0.1.0"
description = ""
authors = ["Release Engineering <release.engineering@scality.com>"]

[tool.poetry.scripts]
start = "gh_actions_exporter.main:start"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
prometheus-client = "^0.19.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
python-multipart = "^0.0.7"
PyYAML = "^6.0"
githubkit = "^0.10.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.10"
mkdocs-multirepo-plugin = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
requests = "^2.32.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
