[tool.poetry]
name = "gh-actions-exporter"
version = "0.1.0"
description = ""
authors = ["Release Engineering <release.engineering@scality.com>"]

[tool.poetry.scripts]
start = "gh_actions_exporter.main:start"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.5"
prometheus-client = "^0.21.0"
uvicorn = { extras = ["standard"], version = "^0.32.1" }
python-multipart = "^0.0.17"
PyYAML = "^6.0"
githubkit = "^0.10.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.46"
mkdocs-multirepo-plugin = "^0.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
flake8 = "^7.1.1"
requests = "^2.32.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
